implements login route
